# action-pipeline

./: README.md
doc/: doc.txt
src/: CMakeLists.txt
src/base/: base_types.h
src/engine/: algorithm.cpp  algorithm.h
src/loader/: bundle_loader.h  file_loader.h  http_loader.h  load_response.h  loader.h  loader_constants.h  resource_loader.cpp  resource_loader.h
src/memory/: memory_map.h
src/transform/: decompressor.h  image_decoder.h  json_transformer.h  transform_constants.h  transform_response.h  transformer.cpp  transformer.h  transformer_base.h
